# backend

./: .env.example  .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml  requirements.txt  routes.py  supabase_connection.py
.github/workflows/: lint.yml
bot/: handlers.py  main.py  markups.py
services/: __init__.py
services/users/: user_service.py
telegram_bot/: handlers.py  loader.py  webhook.py
